[package]
name = "dllbase"
version = "0.1.0"
authors = ["JustFr33z <justfr33z@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
name = "dll_name"

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "processthreadsapi", "handleapi", "consoleapi", "libloaderapi", "wincon", "vadefs"] }